--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
                             <strong>Nieprawidłowy login lub hasło!</strong>
                         </div>
                         <button class="btn btn-success btn-lg" type="submit" value="Sign In">Login</button>
-                        <a th:href= "@{/index}" class="btn btn-outline-danger btn-lg" type="submit">Anuluj</a>
+                        <a th:href= "@{/index}" class="btn btn-danger btn-lg" type="submit">Anuluj</a>
                     </form>
 
                 </div>
