--- a/src/main/resources/templates/admin/pracownicy.html
+++ b/src/main/resources/templates/admin/pracownicy.html
@@ -12,10 +12,11 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
-    <a th:href="@{/}" class="navbar-brand font-weight-bold p1">Klub Lekkoatletyczny</a>
+    <a class="navbar-brand font-weight-bold p1">Klub Lekkoatletyczny</a>
     <div>
-      <a th:href="@{/nasze_zawody}" class="btn btn-dark btn-sm">Nasze zawody</a>
-      <a th:href="@{/trenerzy}" class="btn btn-dark btn-sm">Trenerzy i sekcje</a>
+      <a th:href="@{/main_admin}" class="btn btn-dark btn-sm">Strona Admina</a>
+      <a th:href="@{/nasze_zawody_admin}" class="btn btn-dark btn-sm">Nasze zawody</a>
+      <a th:href="@{/trenerzy_admin}" class="btn btn-dark btn-sm">Trenerzy</a>
       <a th:href="@{/zawodnicy}" class="btn btn-dark btn-sm">Zawodnicy</a>
       <a th:href="@{/pracownicy}" class="btn btn-primary btn-sm">Pracownicy</a>
     </div>
@@ -32,13 +33,13 @@
 
 </nav>
 
-<div class="container tabela" >
+<div class="container d-flex justify-content-center" >
   <div class="text-center" style="color: black" >
     <form th:action="@{/addPracownik}" th:object="${pracownikAdd}" method="post">
-      <table class="table-center table table-striped">
+      <table class="table-center table table-hover">
         <thead>
         <tr>
-          <th>id_pracownika</th>
+          <th>Nr pracownika</th>
           <th>Imie</th>
           <th>Nazwisko</th>
           <th>Plec</th>
@@ -55,7 +56,7 @@
         </thead>
         <tbody>
         <tr th:each="pracownik: ${pracownicy}">
-          <td th:text="${pracownik.nrPracownika}"></td>
+          <td class="delete" th:text="${pracownik.nrPracownika}"></td>
           <td th:text="${pracownik.imie}"></td>
           <td th:text="${pracownik.nazwisko}"></td>
           <td th:text="${pracownik.plec}"></td>
@@ -65,16 +66,14 @@
           <td th:text="${pracownik.dataZatrudnienia}"></td>
           <td th:text="${pracownik.nrKlubu}"></td>
           <td>
-            <a th:href="@{'/pracownicy/' + ${pracownik.nrPracownika}}" class="btn btn-outline-info editBtn" id="editButton" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Edytuj</a>
-            <a class="btn btn-outline-danger" onclick="deleteConfirmation()">Usuń</a>
-            <a style="display: none" th:href="@{'/delete_pracownik/' + ${pracownik.nrPracownika}}" id="confirmBtn"></a>
-
+            <a th:href="@{'/pracownicy/' + ${pracownik.nrPracownika}}" class="btn btn-outline-info editBtn"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">Edytuj</a>
+            <a class="btn btn-outline-danger usunBtn" >Usuń</a>
           </td>
         </tr>
         <tr id="myForm" style="display:none">
           <td>
             <label for="nrPracownika"></label>
-            <input type="number" id="nrPracownika" th:field="*{nrPracownika}" class="form-control-sm" required>
+            <input id="nrPracownika" type="number"  th:field="*{nrPracownika}" class="form-control-sm" required readonly>
           </td>
           <td>
             <label for="Imie"></label>
@@ -118,7 +117,7 @@
         </tbody>
       </table>
     </form>
-    <button class="btn btn-outline-info center" onclick="showHideRow()"> Dodaj </button>
+    <button class="btn btn-outline-info center" id="addButton" onclick="showHideRow()"> Dodaj </button>
   </div>
 </div>
 
@@ -159,12 +158,12 @@
           </div>
           <div class="row">
             <div class="col">
-              <label for="E-mail1">E-mail</label>
-              <input class="getData" type="email" th:field="*{email}" id="E-mail1">
-            </div>
-            <div class="col">
               <label for="tel">Tel.</label>
               <input class="getData" type="tel" th:field="*{telefon}" id="tel">
+            </div>
+            <div class="col">
+              <label for="E-mail1">E-mail</label>
+              <input class="getData" type="email" th:field="*{email}" id="E-mail1">
             </div>
           </div>
           <div class="row">
@@ -185,6 +184,13 @@
     </div>
   </div>
 </form>
+
+<form th:action="@{/delete_pracownik}" method="post" th:object="${pracownikAdd}">
+  <label for="confirmId"></label>
+  <input style="display: none" id="confirmId" th:field="*{nrPracownika}">
+  <button style="display: none" id="confirmBtn" type="submit"></button>
+</form>
+
 
 <!-- footstop -->
 <div class="footer flx">
