--- a/src/main/resources/templates/user/main_user.html
+++ b/src/main/resources/templates/user/main_user.html
@@ -23,9 +23,6 @@
         <a class="navbar-brand font-weight-bold p1" >Klub Lekkoatletyczny</a>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a th:href="@{/main_user}" class="nav-link">Strona główna</a>
-                </li>
                 <li class="nav-item active">
                     <a th:href="@{/nasze_zawody_user}" class="nav-link">Nasze zawody</a>
                 </li>
@@ -59,7 +56,7 @@
 <div class="center" style="color:aliceblue;">
     <h1 style="font-family: Impact, fantasy" > WITAMY! </h1>
     <p>Znajdujesz się na Twojej stronie użytkownika</p>
-    <p>Możesz zobaczyć nasze występy na zawodach, zobacyzć jakich mamy trenerów</p>
+    <p>Możesz zobaczyć nasze występy na zawodach, zobaczyć jakich mamy trenerów</p>
     <p>A co najważniejsze możesz zapisać się do naszego klubu. Nie zwlekaj !!!</p>
 </div>
 
